appId: com.anyelle.tictactoe
---
- launchApp
- tapOn: NEW GAME (VS PLAYER)
# PLayer 1
- tapOn: "Cell Line 1 Column 1: Empty"
# Player 2
- tapOn: "Cell Line 1 Column 3: Empty"
# Player 1
- tapOn: "Cell Line 2 Column 1: Empty"
# Player 2
- tapOn: "Cell Line 2 Column 2: Empty"
# Player 1
- tapOn: "Cell Line 3 Column 2: Empty"
# Player 2
- tapOn: "Cell Line 3 Column 1: Empty"
- assertVisible: Player 2.*TAKES THE ROUND.*
